--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
   <meta name="description" content="High Speed Premium SSH SSL/TLS V2Ray Server" />
   <meta name="author" content="Lalantha Madhushan" />
-  <meta name="keywords" content="lalantha madhushan, lalantha, madhushan, madushan, mickybro, micky, free ssh server, ssh/ssl servers, dropbear, stunnel, v2ray. ehi, free internet, unblock sites, vps, vpn, injector, sri lanka ehi, ssh sri lanka, sinhala injector, ssh/ssl sinhala, srilanka internet">
+  <meta name="keywords" content="lalantha madhushan, lalantha, madhushan, madushan, mickybro, micky, mickyssh, mickyssh.github.io, free ssh server, ssh/ssl servers, dropbear, stunnel, v2ray. ehi, free internet, unblock sites, vps, vpn, injector, sri lanka ehi, ssh sri lanka, sinhala injector, ssh/ssl sinhala, srilanka internet">
   <meta name="robots" content="index, follow" />
   <!-- Bootstrap CSS -->
   <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css" integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
