--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
   <meta name="description" content="High Speed Premium SSH SSL/TLS V2Ray Server" />
   <meta name="author" content="Lalantha Madhushan" />
-  <meta name="keywords" content="lalantha madhushan, lalantha, madhushan, madushan, mickybro, micky, mickyssh, mickyssh.github.io, free ssh server, ssh/ssl servers, dropbear, stunnel, v2ray. ehi, free internet, unblock sites, vps, vpn, injector, sri lanka ehi, ssh sri lanka, sinhala injector, ssh/ssl sinhala, srilanka internet">
+  <meta name="keywords" content="lalantha madhushan, lalantha, madhushan, madushan, mickybro, micky, free ssh server, ssh/ssl servers, dropbear, stunnel, v2ray. ehi, free internet, unblock sites, vps, vpn, injector, sri lanka ehi, ssh sri lanka, sinhala injector, ssh/ssl sinhala, srilanka internet">
   <meta name="robots" content="index, follow" />
   <!-- Bootstrap CSS -->
   <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css" integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
@@ -53,7 +53,7 @@
 
   <!-- Details -->
   <div class="alert alert-white">
-    <p class="h5">Make Your Connection More Secure and Unblock All Sites With SSH Account</p>
+    <p class="h5 text-center">Make Your Connection More Secure and Unblock All Sites With SSH Account</p>
   <br>
     <p class="h4"><b>Latest News</b></p>
     <ul>
@@ -113,7 +113,7 @@
           <h5 class="card-title"><b>US-S01</b></h5>
           <ul class="list-group">
             <li class="list-group-item list-group-item-white"><i class="fa fa-map-marker"style="font-size:20px;"></i>   &nbsp; <b>United States</b></li>
-            <li class="list-group-item list-group-item-white"><i class="fa fas fa-server"style="font-size:20px;"></i>   &nbsp;<b>129.213.122.165</b></li>
+            <li class="list-group-item list-group-item-white"><i class="fa fas fa-server"style="font-size:20px;"></i>   &nbsp;<b>129.213.122.1653</b></li>
             <li class="list-group-item list-group-item-white"><i class="fa fa-user"style="font-size:20px;"></i>   &nbsp;<b>lalantha</b></li>
             <li class="list-group-item list-group-item-white"><i class="fa fas fa-key"style="font-size:20px;"></i>   &nbsp;<b>lalantha</b></li>
             <li class="list-group-item list-group-item-white"><i class="fa fa-clock-o"style="font-size:20px;"></i>   &nbsp;<b>Auto Reboot: 12 Midnight</b></li>
@@ -169,14 +169,14 @@
   <div class="alert alert-white">
     <p class="h4 m-3"><b>V2Ray Server</b></p>
     <p class="h5 m-3">V2Ray Server Currently Not Working.</p>
-    <hr>
+    <br>
     <p class="h4 m-3"><b>For Personal Accounts</b></p>
     <p class="h5 m-3">If you want to configure your own SSH/SSL or V2Ray Server contact me on Facebook or Whatsapp</p>
-    <hr>
+    <br>
     <p class="h4 m-3"><b>Support</b></p>
     <p class="h5 m-3">If you have any issue feel free to contact me on: <a class="text-secondary" href="https://www.facebook.com/lalanthamadushan82">Facebook</a> | <a class="text-secondary" href="https://lalantha.me">lalantha.me</a> | <a class="text-secondary" href="https://github.com/lalantham">My Github</a></p>
   </div>
-  <hr />
+
   <footer class="footer">
       <div class="container text-center">
         <span class="h5">&copy; Copyright 2021 | <a class="text-secondary" href="https://lalantha.me">Lalantha Madhushan</a></span>
