--- a/index.html
+++ b/index.html
@@ -66,7 +66,7 @@
   </div>
 
   <!-- Service Ports -->
-  <div class="alert alert-secondary">
+  <div class="alert alert-white">
     <p class="h4"><b>Service Ports</b></p>
     <ul>
       <li><b>SSH Port: 22</b></li>
@@ -76,7 +76,7 @@
       <li><b>BadVPN Port: 7300</b></li>
     </ul>  
   </div>
-  <br>
+
   <hr />
 
   <div id="ssh/ssl"></div>
@@ -176,7 +176,7 @@
     <p class="h4 m-3"><b>Support</b></p>
     <p class="h5 m-3">If you have any issue feel free to contact me on: <a class="text-secondary" href="https://www.facebook.com/lalanthamadushan82">Facebook</a> | <a class="text-secondary" href="https://lalantha.me">lalantha.me</a> | <a class="text-secondary" href="https://github.com/lalantham">My Github</a></p>
   </div>
-  <hr />
+
   <footer class="footer">
       <div class="container text-center">
         <span class="h5">&copy; Copyright 2021 | <a class="text-secondary" href="https://lalantha.me">Lalantha Madhushan</a></span>
