--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
               <a class="nav-link" href="#ssh/ssl">SSH/SSL Servers</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link disabled" href="#v2ray">V2Ray</a>
+              <a class="nav-link" href="#v2ray">V2Ray</a>
             </li>
             <li class="nav-item">
               <a class="nav-link" href="https://lalantha.me">Contact Me</a>
@@ -57,7 +57,7 @@
   <br>
     <p class="h4"><b>Latest News</b></p>
     <ul>
-      <li><b>2020-01-07: All Serves Tested and Working Fine.</b></li>
+      <li><b>2020-01-09: V2Ray Server Updated.</b></li>
       <li>2020-01-04: Update Singapore Server Username and Password.</li>
       <li>2020-12-28: New Two Australia (Melbourne) Servers Added.</li>
       <li>2020-12-26: Singapore Server New Ip Updated.</li>
@@ -168,18 +168,38 @@
   <!-- V2Ray -->
   <div class="alert alert-white">
     <p class="h4 m-3"><b>V2Ray Server</b></p>
-    <p class="h5 m-3">V2Ray Server Currently Not Working.</p>
-    <br>
+    <div class="card" style="width: 30rem;">
+        <div class="card-body">
+          <h5 class="card-title"><b>SG-V2Ray</b></h5>
+          <ul class="list-group">
+            <li class="list-group-item list-group-item-white"><i class="fa fa-map-marker"style="font-size:20px;"></i>   &nbsp; <b>Singapore</b></li>
+            <li class="list-group-item list-group-item-white"><i class="fa fas fa-check"style="font-size:20px;"></i>   &nbsp;<b>Protocol: VMess</b></li>
+            <li class="list-group-item list-group-item-white"><i class="fa fas fa-check"style="font-size:20px;"></i>   &nbsp;<b>Host: www.mickyssh.ga</b></li>
+            <li class="list-group-item list-group-item-white"><i class="fa fas fa-check"style="font-size:20px;"></i>   &nbsp;<b>Server Port: 443</b></li>
+            <li class="list-group-item list-group-item-white"><i class="fa fas fa-check"style="font-size:20px;"></i>   &nbsp;<b>User ID: c2c808b5-76fc-435a-bdea-64f54a1a001a</b></li>
+            <li class="list-group-item list-group-item-white"><i class="fa fas fa-check"style="font-size:20px;"></i>   &nbsp;<b>Alter ID: 32</b></li>
+            <li class="list-group-item list-group-item-white"><i class="fa fas fa-check"style="font-size:20px;"></i>   &nbsp;<b>Security: Auto</b></li>
+            <li class="list-group-item list-group-item-white"><i class="fa fas fa-check"style="font-size:20px;"></i>   &nbsp;<b>Network Type: WebSocket</b></li>
+            <li class="list-group-item list-group-item-white"><i class="fa fas fa-check"style="font-size:20px;"></i>   &nbsp;<b>WebSocket Header: Your Host</b></li>
+            <li class="list-group-item list-group-item-white"><i class="fa fas fa-check"style="font-size:20px;"></i>   &nbsp;<b>WebSocket Path: /6149c0e/</b></li>
+            <li class="list-group-item list-group-item-white"><i class="fa fas fa-check"style="font-size:20px;"></i>   &nbsp;<b>TLS: Enable</b></li>
+            <li class="list-group-item list-group-item-white"><i class="fa fas fa-check"style="font-size:20px;"></i>   &nbsp;<b>TLS SNI: Your Host</b></li>
+            <li class="list-group-item list-group-item-white"><i class="fa fas fa-check"style="font-size:20px;"></i>   &nbsp;<b>Allow Insecure: Enable</b></li>
+          </ul>  
+        </div>
+      </div>
+    </div>
     <p class="h4 m-3"><b>For Personal Accounts</b></p>
     <p class="h5 m-3">If you want to configure your own SSH/SSL or V2Ray Server contact me on Facebook or Whatsapp</p>
     <br>
     <p class="h4 m-3"><b>Support</b></p>
     <p class="h5 m-3">If you have any issue feel free to contact me on: <a class="text-secondary" href="https://www.facebook.com/lalanthamadushan82">Facebook</a> | <a class="text-secondary" href="https://lalantha.me">lalantha.me</a> | <a class="text-secondary" href="https://github.com/lalantham">My Github</a></p>
   </div>
-
-  <footer class="footer">
+  <br>
+<hr />
+  <footer class="footer footer-dark">
       <div class="container text-center">
-        <span class="h5">&copy; Copyright 2021 | <a class="text-secondary" href="https://lalantha.me">Lalantha Madhushan</a></span>
+        <span class="h5">&copy; Copyright 2021 | <a class="text-secondary" href="https://lalantha.me">Lalantha</a></span>
       </div>
     </footer>
     
