--- a/index.html
+++ b/index.html
@@ -168,7 +168,7 @@
   <!-- V2Ray -->
   <div class="alert alert-white">
     <p class="h4 m-3"><b>V2Ray Server</b></p>
-    <div class="card" style="width: 30rem;">
+    <div class="card">
         <div class="card-body">
           <h5 class="card-title"><b>SG-V2Ray</b></h5>
           <ul class="list-group">
