--- a/index.html
+++ b/index.html
@@ -100,10 +100,10 @@
         <div class="card-body">
           <h5 class="card-title"><b>SG-S02</b></h5>
           <ul class="list-group">
-            <li class="list-group-item list-group-item-white"><i class="fa fa-map-marker"style="font-size:20px;"></i>   &nbsp; <b>Singapore</b></li>
-            <li class="list-group-item list-group-item-white"><i class="fa fas fa-server"style="font-size:20px;"></i>   &nbsp;<b>52.187.128.53</b></li>
-            <li class="list-group-item list-group-item-white"><i class="fa fa-user"style="font-size:20px;"></i>   &nbsp;<b>micky</b></li>
-            <li class="list-group-item list-group-item-white"><i class="fa fas fa-key"style="font-size:20px;"></i>   &nbsp;<b>micky</b></li>
+            <li class="list-group-item list-group-item-white"><i class="fa fa-map-marker"style="font-size:20px;"></i>   &nbsp; <b>Singapore 😕</b></li>
+            <li class="list-group-item list-group-item-white"><i class="fa fas fa-server"style="font-size:20px;"></i>   &nbsp;<b>47.241.107.246</b></li>
+            <li class="list-group-item list-group-item-white"><i class="fa fa-user"style="font-size:20px;"></i>   &nbsp;<b>lalantha</b></li>
+            <li class="list-group-item list-group-item-white"><i class="fa fas fa-key"style="font-size:20px;"></i>   &nbsp;<b>lalantha</b></li>
             <li class="list-group-item list-group-item-white"><i class="fa fa-clock-o"style="font-size:20px;"></i>   &nbsp;<b>Auto Reboot: 12.30 AM</b></li>
           </ul>  
         </div>
