--- a/index.html
+++ b/index.html
@@ -168,7 +168,7 @@
   <!-- V2Ray -->
   <div class="alert alert-white">
     <p class="h4 m-3"><b>V2Ray Server</b></p>
-    <div class="card" style="width: 30rem;">
+    <div class="card" style="width: 25rem;">
         <div class="card-body">
           <h5 class="card-title"><b>SG-V2Ray</b></h5>
           <ul class="list-group">
@@ -185,6 +185,7 @@
             <li class="list-group-item list-group-item-white"><i class="fa fas fa-check"style="font-size:20px;"></i>   &nbsp;<b>TLS: Enable</b></li>
             <li class="list-group-item list-group-item-white"><i class="fa fas fa-check"style="font-size:20px;"></i>   &nbsp;<b>TLS SNI: Your Host</b></li>
             <li class="list-group-item list-group-item-white"><i class="fa fas fa-check"style="font-size:20px;"></i>   &nbsp;<b>Allow Insecure: Enable</b></li>
+            <li class="list-group-item list-group-item-white"><i class="fa fa-clock-o"style="font-size:20px;"></i>   &nbsp;<b>Status: <span style="color: green;">Working</span></b></li>
           </ul>  
         </div>
       </div>
