--- a/index.html
+++ b/index.html
@@ -185,7 +185,7 @@
             <li class="list-group-item list-group-item-white"><i class="fa fas fa-check"style="font-size:20px;"></i>   &nbsp;<b>TLS: Enable</b></li>
             <li class="list-group-item list-group-item-white"><i class="fa fas fa-check"style="font-size:20px;"></i>   &nbsp;<b>TLS SNI: Your Host</b></li>
             <li class="list-group-item list-group-item-white"><i class="fa fas fa-check"style="font-size:20px;"></i>   &nbsp;<b>Allow Insecure: Enable</b></li>
-            <li class="list-group-item list-group-item-white"><i class="fa fa-clock-o"style="font-size:20px;"></i>   &nbsp;<b>Status: <span style="color: green;">Working</span></b></li>
+            <li class="list-group-item list-group-item-white"><i class="fa fa-clock-o"style="font-size:20px;"></i>   &nbsp;<b>Status: <span style="color: red;">Not Working</span></b></li>
           </ul>  
         </div>
       </div>
