--- a/index.html
+++ b/index.html
@@ -104,7 +104,7 @@
             <li class="list-group-item list-group-item-white"><i class="fa fas fa-server"style="font-size:20px;"></i>   &nbsp;<b>47.241.107.246</b></li>
             <li class="list-group-item list-group-item-white"><i class="fa fa-user"style="font-size:20px;"></i>   &nbsp;<b>lalantha</b></li>
             <li class="list-group-item list-group-item-white"><i class="fa fas fa-key"style="font-size:20px;"></i>   &nbsp;<b>lalantha</b></li>
-            <li class="list-group-item list-group-item-white"><i class="fa fa-clock-o"style="font-size:20px;"></i>   &nbsp;<b>Status: <span style="color: green;">Working</span></b></li>
+            <li class="list-group-item list-group-item-white"><i class="fa fa-clock-o"style="font-size:20px;"></i>   &nbsp;<b>Status: <span style="color: red;">Not Working</span></b></li>
           </ul>  
         </div>
       </div>
