--- a/index.html
+++ b/index.html
@@ -89,10 +89,10 @@
           <h5 class="card-title"><b>SG-S01</b></h5>
           <ul class="list-group">
             <li class="list-group-item list-group-item-white"><i class="fa fa-map-marker"style="font-size:20px;"></i>   &nbsp; <b>Singapore</b></li>
-            <li class="list-group-item list-group-item-white"><i class="fa fas fa-server"style="font-size:20px;"></i>   &nbsp;<b>206.189.47.27</b></li>
-            <li class="list-group-item list-group-item-white"><i class="fa fa-user"style="font-size:20px;"></i>   &nbsp;<b>micky</b></li>
-            <li class="list-group-item list-group-item-white"><i class="fa fas fa-key"style="font-size:20px;"></i>   &nbsp;<b>micky</b></li>
-            <li class="list-group-item list-group-item-white"><i class="fa fa-clock-o"style="font-size:20px;"></i>   &nbsp;<b>Status: <span style="color: red;">Not Working</span></b></li>
+            <li class="list-group-item list-group-item-white"><i class="fa fas fa-server"style="font-size:20px;"></i>   &nbsp;<b>188.166.218.157</b></li>
+            <li class="list-group-item list-group-item-white"><i class="fa fa-user"style="font-size:20px;"></i>   &nbsp;<b>Can't put it in public</b></li>
+            <li class="list-group-item list-group-item-white"><i class="fa fas fa-key"style="font-size:20px;"></i>   &nbsp;<b>Can't put it in public</b></li>
+            <li class="list-group-item list-group-item-white"><i class="fa fa-clock-o"style="font-size:20px;"></i>   &nbsp;<b>Status: <span style="color: green;">Working</span></b></li>
           </ul>  
         </div>
       </div>
@@ -102,12 +102,13 @@
           <ul class="list-group">
             <li class="list-group-item list-group-item-white"><i class="fa fa-map-marker"style="font-size:20px;"></i>   &nbsp; <b>Singapore</b></li>
             <li class="list-group-item list-group-item-white"><i class="fa fas fa-server"style="font-size:20px;"></i>   &nbsp;<b>47.241.107.246</b></li>
-            <li class="list-group-item list-group-item-white"><i class="fa fa-user"style="font-size:20px;"></i>   &nbsp;<b>lalantha</b></li>
-            <li class="list-group-item list-group-item-white"><i class="fa fas fa-key"style="font-size:20px;"></i>   &nbsp;<b>lalantha</b></li>
+            <li class="list-group-item list-group-item-white"><i class="fa fa-user"style="font-size:20px;"></i>   &nbsp;<b>Can't put it in public</b></li>
+            <li class="list-group-item list-group-item-white"><i class="fa fas fa-key"style="font-size:20px;"></i>   &nbsp;<b>Can't put it in public</b></li>
             <li class="list-group-item list-group-item-white"><i class="fa fa-clock-o"style="font-size:20px;"></i>   &nbsp;<b>Status: <span style="color: red;">Not Working</span></b></li>
           </ul>  
         </div>
       </div>
+      <br />
       <div class="card">
         <div class="card-body">
           <h5 class="card-title"><b>US-S01</b></h5>
