--- a/index.html
+++ b/index.html
@@ -92,6 +92,7 @@
             <li class="list-group-item list-group-item-white"><i class="fa fas fa-server"style="font-size:20px;"></i>   &nbsp;<b>188.166.218.157</b></li>
             <li class="list-group-item list-group-item-white"><i class="fa fa-user"style="font-size:20px;"></i>   &nbsp;<b>Can't put it in public</b></li>
             <li class="list-group-item list-group-item-white"><i class="fa fas fa-key"style="font-size:20px;"></i>   &nbsp;<b>Can't put it in public</b></li>
+            <li class="list-group-item list-group-item-white"><i class="fa fa-id-card"style="font-size:20px;"></i>   &nbsp;<a href="https://lalantha.me/"><b>Contact for Username & Password</b></a></li>
             <li class="list-group-item list-group-item-white"><i class="fa fa-clock-o"style="font-size:20px;"></i>   &nbsp;<b>Status: <span style="color: green;">Working</span></b></li>
           </ul>  
         </div>
@@ -104,11 +105,19 @@
             <li class="list-group-item list-group-item-white"><i class="fa fas fa-server"style="font-size:20px;"></i>   &nbsp;<b>47.241.107.246</b></li>
             <li class="list-group-item list-group-item-white"><i class="fa fa-user"style="font-size:20px;"></i>   &nbsp;<b>Can't put it in public</b></li>
             <li class="list-group-item list-group-item-white"><i class="fa fas fa-key"style="font-size:20px;"></i>   &nbsp;<b>Can't put it in public</b></li>
-            <li class="list-group-item list-group-item-white"><i class="fa fa-clock-o"style="font-size:20px;"></i>   &nbsp;<b>Status: <span style="color: red;">Not Working</span></b></li>
+            <li class="list-group-item list-group-item-white"><i class="fa fa-id-card"style="font-size:20px;"></i>   &nbsp;<a href="https://lalantha.me/"><b>Contact for Username & Password</b></a></li>
+            <li class="list-group-item list-group-item-white"><i class="fa fa-clock-o"style="font-size:20px;"></i>   &nbsp;<b>Status: <span style="color: green;">Working</span></b></li>
           </ul>  
         </div>
       </div>
       <br />
+    </div>
+
+     <div class="sep"></div>
+    
+      <!-- Row 2 -->
+
+      <div class="card-deck">
       <div class="card">
         <div class="card-body">
           <h5 class="card-title"><b>US-S01</b></h5>
@@ -121,13 +130,6 @@
           </ul>  
         </div>
       </div>
-    </div>
-
-     <div class="sep"></div>
-    
-      <!-- Row 2 -->
-
-      <div class="card-deck">
       <div class="card">
         <div class="card-body">
           <h5 class="card-title"><b>US-S02</b></h5>
@@ -140,6 +142,10 @@
           </ul>  
         </div>
       </div>
+    </div>
+    <!-- Row 2 -->
+
+      <div class="card-deck">
      <div class="card">
         <div class="card-body">
           <h5 class="card-title"><b>AZ-S01</b></h5>
