--- a/index.html
+++ b/index.html
@@ -92,7 +92,7 @@
             <li class="list-group-item list-group-item-white"><i class="fa fas fa-server"style="font-size:20px;"></i>   &nbsp;<b>188.166.218.157</b></li>
             <li class="list-group-item list-group-item-white"><i class="fa fa-user"style="font-size:20px;"></i>   &nbsp;<b>Can't put it in public</b></li>
             <li class="list-group-item list-group-item-white"><i class="fa fas fa-key"style="font-size:20px;"></i>   &nbsp;<b>Can't put it in public</b></li>
-            <li class="list-group-item list-group-item-white"><i class="fa fa-id-card"style="font-size:20px;"></i>   &nbsp;<a href="https://lalantha.me/"><b>Contact for Username & Password</b></a></li>
+            <li class="list-group-item list-group-item-white"><i class="fa fa-id-card"style="font-size:20px;"></i>   &nbsp;<a href="https://lalantha.me/"><b>Contact Me for Username & Password</b></a></li>
             <li class="list-group-item list-group-item-white"><i class="fa fa-clock-o"style="font-size:20px;"></i>   &nbsp;<b>Status: <span style="color: green;">Working</span></b></li>
           </ul>  
         </div>
@@ -105,7 +105,7 @@
             <li class="list-group-item list-group-item-white"><i class="fa fas fa-server"style="font-size:20px;"></i>   &nbsp;<b>47.241.107.246</b></li>
             <li class="list-group-item list-group-item-white"><i class="fa fa-user"style="font-size:20px;"></i>   &nbsp;<b>Can't put it in public</b></li>
             <li class="list-group-item list-group-item-white"><i class="fa fas fa-key"style="font-size:20px;"></i>   &nbsp;<b>Can't put it in public</b></li>
-            <li class="list-group-item list-group-item-white"><i class="fa fa-id-card"style="font-size:20px;"></i>   &nbsp;<a href="https://lalantha.me/"><b>Contact for Username & Password</b></a></li>
+            <li class="list-group-item list-group-item-white"><i class="fa fa-id-card"style="font-size:20px;"></i>   &nbsp;<a href="https://lalantha.me/"><b>Contact Me for Username & Password</b></a></li>
             <li class="list-group-item list-group-item-white"><i class="fa fa-clock-o"style="font-size:20px;"></i>   &nbsp;<b>Status: <span style="color: green;">Working</span></b></li>
           </ul>  
         </div>
