--- a/index.html
+++ b/index.html
@@ -201,7 +201,7 @@
     <p class="h5 m-3">If you want to configure your own SSH/SSL or V2Ray Server contact me on Facebook or Whatsapp</p>
     <br>
     <p class="h4 m-3"><b>Support</b></p>
-    <p class="h5 m-3">If you have any issue feel free to contact me on: <a class="text-secondary" href="https://www.facebook.com/lalanthamadushan82">Facebook</a> | <a class="text-secondary" href="https://lalantha.me">lalantha.me</a> | <a class="text-secondary" href="https://github.com/lalantham">My Github</a></p>
+    <p class="h5 m-3">If you require any further information, let me know.: <a class="text-secondary" href="https://www.facebook.com/lalanthamadushan82">Facebook</a> | <a class="text-secondary" href="https://lalantha.me">lalantha.me</a> | <a class="text-secondary" href="https://github.com/lalantham">My Github</a></p>
   </div>
   <br>
 <hr />
