--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
               <a class="nav-link" href="#ssh/ssl">SSH/SSL Servers</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link" href="#v2ray">V2Ray</a>
+              <a class="nav-link disabled" href="#v2ray">V2Ray</a>
             </li>
             <li class="nav-item">
               <a class="nav-link" href="https://lalantha.me">Contact Me</a>
@@ -82,17 +82,17 @@
   <div id="ssh/ssl"></div>
   <!-- Grid -->
   <!-- Row 1 -->
-  <p class="h4 m-3"><b>SSH/SSL Servers</b></p>
+  <p class="h4 m-3"><b>SSH/SSL Servers {Permanent}</b></p>
   <div class="card-deck">
       <div class="card">
         <div class="card-body">
           <h5 class="card-title"><b>SG-S01</b></h5>
           <ul class="list-group">
             <li class="list-group-item list-group-item-white"><i class="fa fa-map-marker"style="font-size:20px;"></i>   &nbsp; <b>Singapore</b></li>
-            <li class="list-group-item list-group-item-white"><i class="fa fas fa-server"style="font-size:20px;"></i>   &nbsp;<b>206.189.47.27</b></li>
+            <li class="list-group-item list-group-item-white"><i class="fa fas fa-server"style="font-size:20px;"></i>   &nbsp;<b>188.166.218.157</b></li>
             <li class="list-group-item list-group-item-white"><i class="fa fa-user"style="font-size:20px;"></i>   &nbsp;<b>Can't put it in public</b></li>
             <li class="list-group-item list-group-item-white"><i class="fa fas fa-key"style="font-size:20px;"></i>   &nbsp;<b>Can't put it in public</b></li>
-            <li class="list-group-item list-group-item-white"><i class="fa fa-id-card"style="font-size:20px;"></i>   &nbsp;<a href="https://lalantha.me/"><b>Contact Me for Username & Password</b></a></li>
+            <li class="list-group-item list-group-item-white"><i class="fa fa-id-card"style="font-size:20px;"></i>   &nbsp;<a href="https://lalantha.me/"><b>Contact for Username & Password</b></a></li>
             <li class="list-group-item list-group-item-white"><i class="fa fa-clock-o"style="font-size:20px;"></i>   &nbsp;<b>Status: <span style="color: green;">Working</span></b></li>
           </ul>  
         </div>
@@ -105,7 +105,7 @@
             <li class="list-group-item list-group-item-white"><i class="fa fas fa-server"style="font-size:20px;"></i>   &nbsp;<b>47.241.107.246</b></li>
             <li class="list-group-item list-group-item-white"><i class="fa fa-user"style="font-size:20px;"></i>   &nbsp;<b>Can't put it in public</b></li>
             <li class="list-group-item list-group-item-white"><i class="fa fas fa-key"style="font-size:20px;"></i>   &nbsp;<b>Can't put it in public</b></li>
-            <li class="list-group-item list-group-item-white"><i class="fa fa-id-card"style="font-size:20px;"></i>   &nbsp;<a href="https://lalantha.me/"><b>Contact Me for Username & Password</b></a></li>
+            <li class="list-group-item list-group-item-white"><i class="fa fa-id-card"style="font-size:20px;"></i>   &nbsp;<a href="https://lalantha.me/"><b>Contact for Username & Password</b></a></li>
             <li class="list-group-item list-group-item-white"><i class="fa fa-clock-o"style="font-size:20px;"></i>   &nbsp;<b>Status: <span style="color: green;">Working</span></b></li>
           </ul>  
         </div>
@@ -143,9 +143,9 @@
         </div>
       </div>
     </div>
-    <!-- Row 2 -->
-
-      <div class="card-deck">
+    <br>
+    <!-- Row 3 -->
+    <div class="card-deck">
      <div class="card">
         <div class="card-body">
           <h5 class="card-title"><b>AZ-S01</b></h5>
@@ -171,9 +171,51 @@
         </div>
       </div>
     </div>
+    <br>
+    <p class="h4 m-3"><b>SSH/SSL Servers {Temporary}</b></p>
+    <p class="h6 text-danger"><b>* Disclaimer: These Server Sare Not My Own Servers. I Found These Server From Internet Configured By Someone Else. I Don't Know Exactly Expiration Date or Status of These Severs. You Can Try It By Yourself.</b></p>
+    <br>
+    <div class="card-deck">
+     <div class="card">
+        <div class="card-body">
+          <h5 class="card-title"><b>SG-TS01</b></h5>
+          <ul class="list-group">
+            <li class="list-group-item list-group-item-white"><i class="fa fa-map-marker"style="font-size:20px;"></i>   &nbsp; <b>Singapore</b></li>
+            <li class="list-group-item list-group-item-white"><i class="fa fas fa-server"style="font-size:20px;"></i>   &nbsp;<b>192.46.225.168</b></li>
+            <li class="list-group-item list-group-item-white"><i class="fa fas fa-server"style="font-size:20px;"></i>   &nbsp;<b>172.105.112.130</b></li>
+            <li class="list-group-item list-group-item-white"><i class="fa fas fa-server"style="font-size:20px;"></i>   &nbsp;<b>192.46.225.22</b></li>
+            <li class="list-group-item list-group-item-white"><i class="fa fa-user"style="font-size:20px;"></i>   &nbsp;<b>pixepixe</b></li>
+            <li class="list-group-item list-group-item-white"><i class="fa fas fa-key"style="font-size:20px;"></i>   &nbsp;<b>pixepixe</b></li>
+          </ul>  
+        </div>
+      </div>
+      <div class="card">
+        <div class="card-body">
+          <h5 class="card-title"><b>JP-TS02</b></h5>
+          <ul class="list-group">
+            <li class="list-group-item list-group-item-white"><i class="fa fa-map-marker"style="font-size:20px;"></i>   &nbsp; <b>Japan</b></li>
+            <li class="list-group-item list-group-item-white"><i class="fa fas fa-server"style="font-size:20px;"></i>   &nbsp;<b>139.162.106.247</b></li>
+            <li class="list-group-item list-group-item-white"><i class="fa fas fa-server"style="font-size:20px;"></i>   &nbsp;<b>172.104.127.10</b></li>
+            <li class="list-group-item list-group-item-white"><i class="fa fa-user"style="font-size:20px;"></i>   &nbsp;<b>pixepixe</b></li>
+            <li class="list-group-item list-group-item-white"><i class="fa fas fa-key"style="font-size:20px;"></i>   &nbsp;<b>pixepixe</b></li>
+          </ul>  
+        </div>
+      </div>
+      <div class="card">
+        <div class="card-body">
+          <h5 class="card-title"><b>SG-TS02</b></h5>
+          <ul class="list-group">
+            <li class="list-group-item list-group-item-white"><i class="fa fa-map-marker"style="font-size:20px;"></i>   &nbsp; <b>Singapore</b></li>
+            <li class="list-group-item list-group-item-white"><i class="fa fas fa-server"style="font-size:20px;"></i>   &nbsp;<b>128.199.82.219</b></li>
+            <li class="list-group-item list-group-item-white"><i class="fa fa-user"style="font-size:20px;"></i>   &nbsp;<b>pixepix</b></li>
+            <li class="list-group-item list-group-item-white"><i class="fa fas fa-key"style="font-size:20px;"></i>   &nbsp;<b>pixepixe</b></li>
+          </ul>  
+        </div>
+      </div>
+    </div>
   <div id="v2ray"></div>
   <!-- V2Ray -->
-  <div class="alert alert-white">
+  <!-- <div class="alert alert-white">
     <p class="h4 m-3"><b>V2Ray Server</b></p>
     <div class="card" style="width: 25rem;">
         <div class="card-body">
@@ -196,12 +238,13 @@
           </ul>  
         </div>
       </div>
-    </div>
+    </div> -->
+    <br>
     <p class="h4 m-3"><b>For Personal Accounts</b></p>
     <p class="h5 m-3">If you want to configure your own SSH/SSL or V2Ray Server contact me on Facebook or Whatsapp</p>
     <br>
     <p class="h4 m-3"><b>Support</b></p>
-    <p class="h5 m-3">If you require any further information, let me know.: <a class="text-secondary" href="https://www.facebook.com/lalanthamadushan82">Facebook</a> | <a class="text-secondary" href="https://lalantha.me">lalantha.me</a> | <a class="text-secondary" href="https://github.com/lalantham">My Github</a></p>
+    <p class="h5 m-3">If you have any issue feel free to contact me on: <a class="text-secondary" href="https://www.facebook.com/lalanthamadushan82">Facebook</a> | <a class="text-secondary" href="https://lalantha.me">lalantha.me</a> | <a class="text-secondary" href="https://github.com/lalantham">My Github</a></p>
   </div>
   <br>
 <hr />
