--- a/index.html
+++ b/index.html
@@ -57,7 +57,7 @@
   <br>
     <p class="h4"><b>Latest News</b></p>
     <ul>
-      <li><b>2020-01-09: V2Ray Server Updated.</b></li>
+      <li><b>8 Temporary Servers Added.</b></li>
       <li>2020-01-04: Update Singapore Server Username and Password.</li>
       <li>2020-12-28: New Two Australia (Melbourne) Servers Added.</li>
       <li>2020-12-26: Singapore Server New Ip Updated.</li>
