--- a/index.html
+++ b/index.html
@@ -57,8 +57,8 @@
   <br>
     <p class="h4"><b>Latest News</b></p>
     <ul>
-      <li><b>8 Temporary Servers Added.</b></li>
-      <li>2020-01-04: Update Singapore Server Username and Password.</li>
+      <li><b>2021-01-04: New 6 Temporary Servers Added. Including 4 Singapore Servers, 2 Japan Servers.</b></li>
+      <li>2021-01-04: Update Singapore Server Username and Password.</li>
       <li>2020-12-28: New Two Australia (Melbourne) Servers Added.</li>
       <li>2020-12-26: Singapore Server New Ip Updated.</li>
       <li>2020-12-26: V2Ray Server Currently Not Working.</li>
